Bugfix: single-photoalbuml.php size of div was too large. fixed that and added outline

--- a/css/dark.css
+++ b/css/dark.css
@@ -107,7 +107,14 @@ h2
 {
 	outline-color:transparent;
 }
-
+.photo_album_item
+{
+	outline-color:transparent;
+}
+.photo_album_item:hover
+{
+	outline-color:red;
+}
 .photoalbum:hover
 {
 	outline-color:blue;
